fix navigation button spacing

--- a/ui/scss/component/_header.scss
+++ b/ui/scss/component/_header.scss
@@ -108,6 +108,10 @@
   }
 }
 
+.header__navigation-item--forward {
+  margin-right: 0;
+}
+
 .header__navigation-item--icon {
   @media (max-width: $breakpoint-small) {
     margin: 0;
